<resources>
    <string name="app_name">Falcon Finder</string>
    <string name="view_name">Category</string>
    <string name="action_settings">Settings</string>
    //buttons
    <string name="all">All</string>
    <string name="greek_life">Greek Life</string>
    <string name="career_services">Career Services</string>
    <string name="sports">Sports</string>
    <string name="other">Other</string>
    //menu
    <string name="exit">Exit</string>
    <string name="settings">Settings</string>
    <string name="user_events">User Events</string>
    <string name="categories">Categories</string>
    //colors
    <color name="yellow">#FFFFFF00</color>
    <color name="white">#FFFFFF</color>
    <color name="gray">#FF999999</color>
    <color name="blue">#FF000080</color>
    <color name="light_blue">#FFADD8e6</color>
    <color name="black">#000000</color>
    <color name="red">#FFF80000</color>
</resources>
