<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/blue">
    <TextView
        android:id="@+id/name"
        android:background="@color/yellow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:textColor="@color/black"
        android:text="@string/view_name"
        android:textSize="20dip"/>

    <Button
        android:id="@+id/all"
        android:layout_marginTop="10dip"
        android:layout_centerHorizontal="true"
        android:layout_width="200dip"
        android:layout_height="wrap_content"
        android:background="@color/light_blue"
        android:layout_below="@+id/name"
        android:text="@string/all"
        android:textAllCaps="false">
    </Button>

    <Button
        android:id="@+id/Greek_Life"
        android:layout_marginTop="10dip"
        android:layout_centerHorizontal="true"
        android:layout_width="200dip"
        android:layout_height="wrap_content"
        android:background="@color/light_blue"
        android:layout_below="@+id/all"
        android:text="@string/greek_life"
        android:textAllCaps="false">
    </Button>
    <Button
        android:id="@+id/Career_Service"
        android:layout_marginTop="10dip"
        android:layout_centerHorizontal="true"
        android:layout_width="200dip"
        android:layout_height="wrap_content"
        android:background="@color/light_blue"
        android:layout_below="@+id/Greek_Life"
        android:text="@string/career_services"
        android:textAllCaps="false">
    </Button>
    <Button
        android:id="@+id/Sports"
        android:layout_marginTop="10dip"
        android:layout_centerHorizontal="true"
        android:layout_width="200dip"
        android:layout_height="wrap_content"
        android:background="@color/light_blue"
        android:layout_below="@+id/Career_Service"
        android:text="@string/sports"
        android:textAllCaps="false">
    </Button>
    <Button
        android:id="@+id/Other"
        android:layout_marginTop="10dip"
        android:layout_centerHorizontal="true"
        android:layout_width="200dip"
        android:layout_height="wrap_content"
        android:background="@color/light_blue"
        android:layout_below="@+id/Sports"
        android:text="@string/other"
        android:textAllCaps="false">
    </Button>
</RelativeLayout>